<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumo_ros</name>
  <version>0.0.0</version>
  <description>
    ROS nodes for Zumo Robot
  </description>
  <license>TODO: License declaration</license>

  <author email="continicola89@gmail.com">Nicola Conti</author>
  <maintainer email="continicola89@gmail.com">Nicola Conti</maintainer>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>v4l2_camera</depend>

  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
